[package]
name = "tm_block_in_place"
version = "0.1.0"
authors = ["Scott Tadman <scott@tadman.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", default-features = false, features = ["full"] }
tokio-macros = { version = "=1.4.0" }
